Fixed notation bugs, chord bug, classroom results bug, dashboard layout issues

--- a/wp-content/themes/industry/css/front-page.css
+++ b/wp-content/themes/industry/css/front-page.css
@@ -228,7 +228,7 @@ ul.nav li a, a.navbar-brand{
 #contact-form .btn{
     background-color:#5C9FCB;
     color:white;
-    width:48%;
+    width:487%;
     margin-top:6%;
 }
 
