--- a/wp-content/themes/industry/css/student.css
+++ b/wp-content/themes/industry/css/student.css
@@ -56,3 +56,8 @@ input[type=submit]:hover, .primary-button:hover{
     color:#1776B6;
     text-decoration:none;
 }
+
+ .eartrain-button{
+     width:100%;
+     margin-top:20px;
+ }
